public/css/cpdbviz.css
nav ul li a, h5 {
    color: rgb(127, 123, 123);
  }

  div, a {
    color: rgb(90, 87, 87);
  }

  .teal-text li a{
    color: teal;
  }

  th, td, p, input {
    font-size: 12px;
    color: rgb(90, 87, 87);
  }

  .modal { width: 100% !important ; height: 100% !important ; }

  .dataTables_filter input {
    width: 250px;
    height: 32px;
    background: #fcfcfc;
    border: 1px solid #aaa;
    border-radius: 5px;
    box-shadow: 0 0 3px #ccc, 0 10px 15px #ebebeb inset;
    text-indent: 10px;
  }

  .material-tooltip {
    background-color: #edecec;
    font-family: "Helvetica";
    font-size: 12px;
  }

  .toc-header {
    padding: 10px;
    font-family: "Helvetica";
    font-size: 16px;
  }

  .search-header {
    padding: 10px;
    font-family: "Helvetica";
    font-size: 18px;
  }

  .search-input-label {
    font-size: 18px !important;
  }

  .switch-label {
    font-size: 16px !important;
  }

  .inline-icon {
    vertical-align: bottom;
    font-size: 24px !important;
  }

  .text-bold {
    font-weight: bold !important;
  }

  .axis .grid-line{
    stroke: grey;
    shape-rendering: crispEdges;
    stroke-opacity: .3;
  }

 /* The following two settings ensure there is no colour change between on and off state */
 .switch label .lever {
    background-color: #84c7c1 !important;
  }
 .switch label .lever:after {
    background-color: #F1F1F1 !important;
 }

 /*==================================================
    CELLPHONEDB INPUT AND PREDICTIONS PANES
 ==================================================*/

 /* Overall display for CellphoneDB panes */

 #cci-display-box, #input-display-box {
  padding-top: 5px;
  height: 90vh;
  width: 95%;
  margin: auto;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

#cci-display-panel, #input-display-panel {
  margin-left: 0;
  margin-right: 0;
  align-self: stretch;
  flex: 1;
  display: flex;
  overflow-y: scroll;
}

.cci-display {
  overflow-x: scroll;
}

#input-display-panel {
  overflow-x: scroll;
}

#cci-summary, #cci-search, #single-gene-expr, .input-display {
  padding-top: 20px !important;
}

.input-conf-btn {
  float: left !important;
}

.border-card {
  border-style: solid;
  border-radius: 5px;
  border-color: hsl(0, 0%, 71%);
  border-width: thin;
  box-shadow: none;
}

/* Tabs for CellphoneDB predictions pane */

#cci-tabs-row, #cci-display-panel, #input-tabs-row, #input-display-panel {
  margin-bottom: 0%;
}

#cci-tabs, #input-tabs {
  padding-inline-start: 0px;
  border-bottom: solid;
  border-color: hsl(0, 0%, 71%);
  border-width: thin;
}

#cci-tabs .tab a, #input-tabs .tab a{
  color:#1565c0;
}

#cci-tabs .tab a:hover, #input-tabs .tab a:hover {
  background-color:#eee;
  color:#0d47a1;
}

#cci-tabs .tab a.active, #input-tabs .tab a.active {
  background-color:#bbdefb;
  color:#0d47a1;
}

#cci-tabs .indicator, #input-tabs .indicator {
  background-color:#1565c0;
}

/* Config panel for CellphoneDB predictions pane */

#cci-config {
  border-right: solid;
  border-color: hsl(0, 0%, 71%);
  border-width: thin;
  overflow-y: scroll;
  position: relative;
}

.filter-menu-padding {
  padding-right: 0px;
  padding-top: 20px;
  padding-bottom: 20px;
}

.filter-layer-one {
  padding-left: 10px;
}

.filter-layer-two {
  padding-left: 20px;
}

.outer-filter-nest {
  color: black;
  font-size: .83em;
  font-weight: bold;
}

.filter-divider {
  margin-top: 10px;
  margin-bottom: 10px;
}

.filter-search-and-buttons {
  padding-bottom: 10px;
  margin-right: 20px;
  margin-top: 0px;
  margin-bottom: 0px;
  width: 100%;
}

.filter-row {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

#apply-reset-filters, .no-margin-bottom {
  margin-bottom: 0;
}

.margin-top {
  margin-top: 0.75rem !important;
}
.modal {
  max-height: 100%;
  bottom: 10% !important;
}

